--- a/index.html
+++ b/index.html
@@ -1,34 +1,32 @@
-<!doctype html>
-<html lang="id">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Babylon VR — Computer Lab (Modular)</title>
-  <style>
-  html, body {
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-  }
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <title>PC Assembly VR</title>
+    <style>
+      html, body {
+        overflow: hidden;
+        width: 100%;
+        height: 100%;
+        margin: 0;
+        padding: 0;
+      }
+      canvas {
+        width: 100%;
+        height: 100%;
+        touch-action: none;
+      }
+    </style>
+  </head>
 
-  #renderCanvas {
-    width: 100%;
-    height: 100%;
-    touch-action: none;
-    display: block;
-  }
-</style>
+  <body>
+    <canvas id="renderCanvas"></canvas>
 
-</head>
-<body>
-  <canvas id="renderCanvas"></canvas>
-  <!-- Babylon core + loaders (CDN) -->
-  <script src="https://cdn.babylonjs.com/babylon.js"></script>
-  <script src="https://cdn.babylonjs.com/loaders/babylonjs.loaders.min.js"></script>
+    <!-- Babylon.js -->
+    <script src="https://cdn.babylonjs.com/babylon.js"></script>
+    <script src="https://cdn.babylonjs.com/loaders/babylonjs.loaders.min.js"></script>
 
-  <!-- main module -->
-  <script type="module" src="js/main.js"></script>
-</body>
+    <!-- Your scripts -->
+    <script type="module" src="./main.js"></script>
+  </body>
 </html>
