fixing calling directory main.js on index.html

--- a/index.html
+++ b/index.html
@@ -27,6 +27,6 @@
     <script src="https://cdn.babylonjs.com/loaders/babylonjs.loaders.min.js"></script>
 
     <!-- Your scripts -->
-    <script type="module" src="./main.js"></script>
+    <script type="module" src="./js/main.js"></script>
   </body>
 </html>
