adjust index.html using canvas from rafif's web inspect

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
   </head>
 
   <body>
-    <canvas id="renderCanvas"></canvas>
+    <!-- <canvas id="renderCanvas"></canvas> -->
+    <canvas id="renderCanvas" touch-action="none" style="touch-action: none; -webkit-tap-highlight-color: transparent;" width="3390" height="3392" data-engine="Babylon.js v8.37.0" tabindex="1"></canvas>
 
     <!-- Babylon.js -->
     <script src="https://cdn.babylonjs.com/babylon.js"></script>
@@ -29,4 +30,5 @@
     <!-- Your scripts -->
     <script type="module" src="./js/main.js"></script>
   </body>
+</html>
 </html>
