--- a/index.html
+++ b/index.html
@@ -20,7 +20,29 @@
   </head>
 
   <body>
-    <!-- <canvas id="renderCanvas"></canvas> -->
+    <!-- <canvas id="renderCanvas"></canvas> -->  
+    <div id="mainMenu" style="
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      background: rgba(0,0,0,0.85);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+      color: white;
+      z-index: 10;
+      font-family: sans-serif;
+    ">
+      <h1>PC Assembly VR</h1>
+      <button id="startBtn" style="
+        padding: 10px 20px;
+        font-size: 18px;
+        cursor: pointer;
+      ">
+        Start
+      </button>
+    </div>
     <canvas id="renderCanvas" touch-action="none" style="touch-action: none; -webkit-tap-highlight-color: transparent;" width="3390" height="3392" data-engine="Babylon.js v8.37.0" tabindex="1"></canvas>
 
     <!-- Babylon.js -->
