--- a/index.html
+++ b/index.html
@@ -1,32 +1,15 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <title>PC Assembly VR</title>
-    <style>
-      html, body {
-        overflow: hidden;
-        width: 100%;
-        height: 100%;
-        margin: 0;
-        padding: 0;
-      }
-      canvas {
-        width: 100%;
-        height: 100%;
-        touch-action: none;
-      }
-    </style>
-  </head>
-
-  <body>
-    <canvas id="renderCanvas"></canvas>
-
-    <!-- Babylon.js -->
-    <script src="https://cdn.babylonjs.com/babylon.js"></script>
-    <script src="https://cdn.babylonjs.com/loaders/babylonjs.loaders.min.js"></script>
-
-    <!-- Your scripts -->
-    <script type="module" src="./main.js"></script>
-  </body>
+<!doctype html>
+<html lang="id">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1"/>
+  <title>VR PC Assembly - Modular (Babylon)</title>
+  <script src="https://cdn.babylonjs.com/babylon.js"></script>
+  <script src="https://cdn.babylonjs.com/loaders/babylonjs.loaders.min.js"></script>
+  <style>html,body,#renderCanvas{width:100%;height:100%;margin:0;padding:0;overflow:hidden}canvas{touch-action:none}</style>
+</head>
+<body>
+  <canvas id="renderCanvas"></canvas>
+  <script type="module" src="./src/main.js"></script>
+</body>
 </html>
