adjust mainmenu to have access with vr

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </head>
 
   <body> 
-    <div id="mainMenu" style="
+    <!-- <div id="mainMenu" style="
       position: absolute;
       width: 100%;
       height: 100%;
@@ -41,7 +41,7 @@
       ">
         Start
       </button>
-    </div>
+    </div> -->
 
     <canvas id="renderCanvas" touch-action="none" style="touch-action: none; -webkit-tap-highlight-color: transparent;" width="3390" height="3392" data-engine="Babylon.js v8.37.0" tabindex="1"></canvas>
 
