add babylon.js gui

--- a/index.html
+++ b/index.html
@@ -22,13 +22,16 @@
   <body> 
     <canvas id="renderCanvas" touch-action="none" style="touch-action: none; -webkit-tap-highlight-color: transparent;" width="3390" height="3392" data-engine="Babylon.js v8.37.0" tabindex="1"></canvas>
 
-    <!-- Babylon.js -->
+    <!-- Babylon core -->
     <script src="https://cdn.babylonjs.com/babylon.js"></script>
+
+    <!-- Babylon loaders -->
     <script src="https://cdn.babylonjs.com/loaders/babylonjs.loaders.min.js"></script>
 
-    
+    <!-- BABYLON.GUI (2D/3D GUI) — BUKAN MODULE -->
+    <script src="https://cdn.babylonjs.com/gui/babylon.gui.min.js"></script>
 
-    <!-- Your scripts -->
+    <!-- Your module scripts -->
     <script type="module" src="./js/main.js"></script>
   </body>
 </html>
