delete min on 3D gui cdn in index.html

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <script src="https://cdn.babylonjs.com/loaders/babylonjs.loaders.min.js"></script>
 
     <!-- BABYLON.GUI (2D/3D GUI) — BUKAN MODULE -->
-    <script src="https://cdn.babylonjs.com/gui/babylon.gui.min.js"></script>
+    <script src="https://cdn.babylonjs.com/gui/babylon.gui.js"></script>
 
     <!-- Your module scripts -->
     <script type="module" src="./js/main.js"></script>
