--- a/index.html
+++ b/index.html
@@ -3,10 +3,23 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
-  <title>VR PC Assembly - Modular (Babylon)</title>
+  <title>VR PC Assembly - Babylon</title>
+
+  <!-- Physics -->
+  <script src="https://cdn.babylonjs.com/ammo.js"></script>
+
+  <!-- Babylon -->
   <script src="https://cdn.babylonjs.com/babylon.js"></script>
   <script src="https://cdn.babylonjs.com/loaders/babylonjs.loaders.min.js"></script>
-  <style>html,body,#renderCanvas{width:100%;height:100%;margin:0;padding:0;overflow:hidden}canvas{touch-action:none}</style>
+
+  <style>
+    html, body, #renderCanvas {
+      width: 100%; height: 100%;
+      margin: 0; padding: 0;
+      overflow: hidden;
+    }
+    canvas { touch-action: none; }
+  </style>
 </head>
 <body>
   <canvas id="renderCanvas"></canvas>
