add scene pc, laptop, server to index.html

--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
 
   <!-- Your JS (non-module) -->
   <script src="./js/mainmenu.js"></script>
-  <script src="./js/scene.js"></script>
+  <script src="./js/scenePc.js"></script>
+  <script src="./js/sceneLaptop.js"></script>
+  <script src="./js/sceneServer.js"></script>
   <script src="./js/interactions.js"></script>
   
   <!-- Main JS (non-module) -->
