--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
     
     <script src="https://cdn.babylonjs.com/gui/babylon.gui.min.js"></script>
 
-    <script type="module" src="src/main.js"></script>
+    <script type="module" src="src/app.js"></script>
 </body>
 </html>
