--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <canvas id="renderCanvas"></canvas>
 
     <script src="https://cdn.babylonjs.com/babylon.js"></script>
+    <script src="https://cdn.babylonjs.com/ammo.js"></script>
     
     <script src="https://cdn.babylonjs.com/loaders/babylonjs.loaders.min.js"></script>
     
